style: fixed spacing

--- a/style/styles.css
+++ b/style/styles.css
@@ -22,6 +22,8 @@ h1 {
     font-size: 22px;
     line-height: 28px;
     text-align: center;
+    margin-top: 24px;
+    margin-bottom: 16px;
 }
 
 p {
@@ -32,6 +34,7 @@ p {
     line-height: 19px;
     text-align: center;
     letter-spacing: 0.1875px;
+    margin-bottom: 40px;
     color: #7D889E;
 }
 
